2002-11-30  Alexandre Duret-Lutz  <adl@gnu.org>

	* tests/texinfo3.test: Make sure we don't output single suffix
	inference rules when building `.info'-less Info files (this
	confuses Solaris make).  Run distcheck to make sure the rules
	work.
	* automake.in (output_texinfo_build_rules): Define GENERIC_INFO
	and SOURCE_INFO.
	* lib/am/texibuild.am (%SOURCE_SUFFIX%%DEST_SUFFIX%,
	%DEST_PREFIX%%DEST_SUFFIX%): Honor GENERIC_INFO and SOURCE_INFO.

2002-11-29  Alexandre Duret-Lutz  <adl@gnu.org>

	For PR automake/359:
	* automake.in (do_check_merge_target): Make `check' dependent on
	$(BUILT_SOURCES) if the variable is defined.  Run `check-am' or
	`check-recursive' in a submake in this case.
	* tests/check2.test, tests/check3.test: New files.
	* tests/check.test: Make sure `check' depends on `check-am'.
	* tests/Makefile.am (TESTS): Add check2.test and check3.test.

	For PR automake/371 and PR automake/372:
	* automake.in (rule_define): Honor inference rules with multiple
	targets, and warn when they are used.
	* tests/suffix11.test: New file.
	* tests/Makefile.am (TESTS): Add suffix11.test.
	Reported by Duncan Gibson.

2002-11-28  Alexandre Duret-Lutz  <adl@gnu.org>

	For PR automake/370:
	* automake.in (handle_languages): Don't prepend $U to $myext
	since handle_single_transform_list now appends it to $obj.
	Process the rule twice to handle deansified files in subdirectories.
	Mark _.c files in subdirectories for cleaning.
	(handle_single_transform_list): Append $U to $obj_sans_ext if
	needed: before this dependencies were output foo.Po instead
	of foo$U.Po.  Don't output explicit dependencies for renamed
	objects or sources in sub-directories: we already output
	a full compile rule for them.
	(lang_c_finish): Don't always use the full filename in the
	.c -> _.c rule.  This reverts part of my change of 2002-11-21.
	* tests/ansi6.test, tests/ansi7.test: Make sure deansified
	files are created in the right directory, and cleaned.
	Reported by Kevin Ryde.
