@@ -45,6 +45,7 @@ END
 : > foo.c
 
 $ACLOCAL
+: > ltmain.sh
 $AUTOMAKE --add-missing
 
 # This however should be diagnosed, since foo.c is in @LIBOBJS@.
