@@ -52,8 +52,9 @@ $AUTOCONF
 
 test -f autoconf/ltmain.sh # Sanity check.
 rm -f autoconf/ltmain.sh
-$AUTOMAKE --add-missing --copy 2>stderr
+$AUTOMAKE --add-missing --copy 2>stderr && exit 1
 cat stderr
+grep 'autoconf/ltmain.sh' stderr
 grep 'running more than two' stderr && exit 1
 
 # Since we are ensuring that 'running more than two' is not printed,
