@@ -1,5 +1,15 @@
 2002-11-30  Alexandre Duret-Lutz  <adl@gnu.org>
 
+	For PR automake/357:
+	* automake.in (require_file_internal): Don't complain a file is "not
+	found" when it is a target.  Make sure "not found" files are otherwise
+	reported as error (they were reported as 'note').
+	* tests/distcommon3.test: Augment to test the above.
+	* tests/libobj12b.test: Touch ltmain.sh.
+	* tests/required2.test: Make sure Automake fails because ltmain.sh
+	has been removed.
+	Reported by Ronald Landheer.
+
 	* tests/texinfo3.test: Make sure we don't output single suffix
 	inference rules when building `.info'-less Info files (this
 	confuses Solaris make).  Run distcheck to make sure the rules
